added tests, fixed list items mapping

--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -20,7 +20,7 @@
       Ids can't be negative
     </div>
     <div *ngIf="specifiedIdsControl.hasError('invalidFormat')" class="error">
-      Ids should be numbers and provided through the comma without any spaces
+      Ids should be numbers and provided through the comma without any spaces (e.g. 1,2,3)
     </div>
   </div>
 </div>
