--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -7,7 +7,7 @@
       <td>child</td>
   </thead>
   <tbody>
-      <tr *ngFor="let item of data">
+      <tr *ngFor="let item of data" class="row">
         <td>{{item.id}}</td>
         <td>{{item.int}}</td>
         <td>{{item.float}}</td>
